fixed loginModal alignment

--- a/frontend/src/components/SpotShow/SpotShow.css
+++ b/frontend/src/components/SpotShow/SpotShow.css
@@ -7,6 +7,13 @@ h2 {
   color: rgb(54, 54, 54);
 }
 
+.spot-name h2 {
+  margin-top: 2em;
+  margin-bottom: 1em;
+  color: #7087c5;
+  font-size: xx-large;
+}
+
 h3 {
   font-weight: lighter;
 }
@@ -55,9 +62,14 @@ mini-avg-star-rating {
   grid-template-columns: 71.4% 28.6%;
 }
 
+.spot-details-container-1 div div div h3 {
+  font-style: italic;
+  color: #6960b6
+}
+
 .spot-details-container-1-a {
-  font-size: small;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+  font-size: medium;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .spot-details-container-2-a {
